update: Eメールアドレスを Vue 経由で表示するようにした

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <table>
             <tr>
               <td>・E-mail：</td>
-              <td>39yatabis.work@gmail.com</td>
+              <td><a :href="'mailto: ' + email">{{ email }}</a></td>
             </tr>
             <tr>
               <td>・Twitter：</td>
