update: 経歴の更新

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             <li>このとき初めてプログラミングに触れる</li>
             <li>使用言語は HSP</li>
             <li>主にゲーム作りを楽しむ</li>
+            <li>人間の声を機械的に合成するシステムを作るという野望を持つ</li>
           </ul>
           <h4 class="card-subtitle">2015年</h4>
           <ul>
@@ -164,7 +165,7 @@
           <h4 class="card-subtitle">2016年</h4>
           <ul>
             <li>3回生からの情報学科への転学科を試みるも失敗</li>
-            <li>授業で一応データ構造とアルゴリズムなどを学ぶ</li>
+            <li>授業で一応データ構造とアルゴリズムやグラフ理論などを学ぶ</li>
             <li>C言語での数値計算や電磁界シミュレーションなどを学ぶ</li>
           </ul>
           <h4 class="card-subtitle">2017年</h4>
@@ -180,6 +181,7 @@
             <li>主に自分用に PC で使えるツール作りに勤しむ</li>
             <li>その後 Web プログラミングに入門し HTML/CSS/JavaScript を学び始める</li>
             <li>エンジニア学生団体 Tech Garage に誘ってもらい 参加</li>
+            <li>その後 運営メンバーに加入</li>
           </ul>
           <h4 class="card-subtitle">2019年</h4>
           <ul>
@@ -192,7 +194,9 @@
           </ul>
           <h4 class="card-subtitle">2020年</h4>
           <ul>
-            <li>静的型付けのコンパイル言語に興味を持ち Go Rust などを学び始める</li>
+            <li>静的型付けのコンパイル言語の処理速度と安全性に感じ始める</li>
+            <li>Go で Web のサーバーを書き始める</li>
+            <li>Rust にハマる</li>
           </ul>
         </div>
       </article>
