add: Biography に趣味を追加

--- a/index.html
+++ b/index.html
@@ -199,6 +199,58 @@
             <li>Rust にハマる</li>
           </ul>
         </div>
+        <div class="card-body">
+          <h1 class="card-title">趣味</h1>
+          <h4 class="card-subtitle">プログラミング</h4>
+          <ul>
+            <li>高校時代にハマってからずっと熱中している</li>
+            <li>便利なツールを作って使うのがとても楽しい</li>
+            <li>好きな言語は Python</li>
+          </ul>
+          <h4 class="card-subtitle">音楽</h4>
+          <ul>
+            <li>プログラミングを知る前からの趣味</li>
+            <li>邦ロックが好き</li>
+            <li>ポップス ジャズ クラシック アニメ音楽 ゲーム音楽 なども</li>
+            <li>アコースティックギターを弾く</li>
+            <li>エレキギター エレキベース ピアノ も少々</li>
+            <li>好きなアーティストはたくさんいる
+              <ul>
+                <li>RADWIMPS</li>
+                <li>米津玄師</li>
+                <li>大石昌良</li>
+                <li>etc... (敬称略)</li>
+              </ul>
+            </li>
+          </ul>
+          <h4 class="card-subtitle">数学</h4>
+          <ul>
+            <li>趣味としての数学</li>
+            <li>必ずしも得意ではない</li>
+            <li>大学一回生レベルの一般教養数学まで</li>
+            <li>好きな公式は 二次方程式の解の公式</li>
+          </ul>
+          <h4 class="card-subtitle">物理</h4>
+          <ul>
+            <li>趣味としての物理</li>
+            <li>特に、量子論物理とか素粒子物理とか</li>
+            <li>大学で学んだので専門的なことも少しわかる程度</li>
+            <li>好きな物理学者 (?) は ジョン・フォン・ノイマン</li>
+          </ul>
+          <h4 class="card-subtitle">ゲーム</h4>
+          <ul>
+            <li>好きだけど最近できていない</li>
+            <li>RPG シミュレーション アクション など</li>
+            <li>スマホゲームも少し嗜む</li>
+            <li>好きなゲームは
+              <ul>
+                <li>ポケットモンスター ルビー＆サファイア</li>
+                <li>Fate/Grand Order (スマホ)</li>
+                <li>MINECRAFT (PC)</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </article>
     </main>
     <footer><small>Copyright &copy; 2020 yatabis All Rights Reserved.</small></footer>
