--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <article class="card mx-auto my-4" id="home" v-show="tab==='home'">
         <div class="card-body">
           <h1 class="card-title">湯川 慎之介</h1>
-          <p><img class="mx-1" alt="last update" :src="updated_at"><img class="mx-1" alt="lang=ja" src="https://img.shields.io/badge/lang-ja-brightgreen"><img class="mx-1" alt="Twitter Follow" src="https://img.shields.io/twitter/follow/yatabis_tg?label=Follow&amp;style=social"></p>
+          <p><img class="mx-1" :alt="'last update ' + updated_at" :src="updated_badge"><img class="mx-1" alt="lang=ja" src="https://img.shields.io/badge/lang-ja-brightgreen"><img class="mx-1" :alt="'AtCoder rating ' + rating" :src="rating_badge"><a href="https://twitter.com/intent/follow?screen_name=yatabis_tg" target="_blank" rel="noopener noreferrer"><img class="mx-1" alt="Twitter Follow" src="https://img.shields.io/twitter/follow/yatabis_tg?label=Follow&amp;style=social"></a></p>
           <p class="card-text">京都大学 大学院 工学研究科 電子工学専攻 修士課程 2年<br>大阪府在住<br>プログラミング大好きマン<br>アコースティックギター</p>
         </div>
         <div class="card-body">
